# pentair-ha

./: .gitignore  PLAN.md  README.md  hacs.json  info.md  pyproject.toml
.github/agents/: architecture-security.agent.md  development.agent.md  orchestrator.agent.md  platform-ops.agent.md  quality.agent.md  strategy-design.agent.md
.github/workflows/: release.yaml  validate.yaml
custom_components/pentair_easytouch/: __init__.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  light.py  manifest.json  model.py  number.py  select.py  sensor.py  strings.json  switch.py
custom_components/pentair_easytouch/protocol/: __init__.py  chlorinator.py  circuit_config.py  commands.py  custom_names.py  framing.py  messages.py  pump.py  status.py  transport.py  valuemaps.py
custom_components/pentair_easytouch/translations/: en.json
tests/: test_chlorinator.py  test_chlorinator_framing.py  test_circuit_config.py  test_commands.py  test_config_flow.py  test_const.py  test_coordinator.py  test_custom_names.py  test_diagnostics.py  test_entity_binary_sensor.py  test_entity_button.py  test_entity_climate.py  test_entity_light.py  test_entity_number.py  test_entity_select.py  test_entity_sensor.py  test_entity_switch.py  test_framing.py  test_messages.py  test_model.py  test_model_extra.py  test_protocol_gaps.py  test_pump.py  test_status.py  test_transport.py  test_transport_extra.py  test_valuemaps.py
